[gd_scene load_steps=8 format=3 uid="uid://dgro3xdk4qw3n"]

[ext_resource type="Script" path="res://scripts/scout.gd" id="1_poa0r"]
[ext_resource type="Texture2D" uid="uid://80vomayvjksu" path="res://graphics/enemies/scout.png" id="1_x6pru"]
[ext_resource type="Shader" path="res://scripts/scout.gdshader" id="2_5rkjo"]
[ext_resource type="AudioStream" uid="uid://my34y6rkdnwk" path="res://audio/organic_impact.mp3" id="4_tqent"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vsb33"]
shader = ExtResource("2_5rkjo")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_diyqc"]
radius = 62.0

[sub_resource type="CircleShape2D" id="CircleShape2D_h8epn"]
radius = 1550.0

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_poa0r")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_vsb33")
position = Vector2(41, 27)
rotation = 1.5708
texture = ExtResource("1_x6pru")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_diyqc")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_h8epn")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(123, -27)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(131, 12)

[node name="LaserCooldown" type="Timer" parent="."]

[node name="HurtAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_tqent")

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
